--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   "dependencies": {
     "angular": "^1.5.7",
     "angular-ui-router": "^0.3.1",
+    "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "cors": "^2.7.1",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
-    "jsonwebtoken": "^7.1.3",
-    "mongoose": "^4.5.4"
+    "jsonwebtoken": "^7.1.6",
+    "jwt-simple": "^0.5.0",
+    "moment": "^2.14.1",
+    "mongoose": "^4.5.4",
+    "path": "^0.12.7",
+    "querystring": "^0.2.0",
+    "request": "^2.73.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
