--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^4.5.4",
     "path": "^0.12.7",
     "querystring": "^0.2.0",
-    "request": "^2.73.0"
+    "request": "^2.73.0",
+    "satellizer": "^0.15.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
