--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
+    "browser-sync": "^2.13.0",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-minify-css": "^1.2.4",
@@ -35,8 +36,6 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.4",
-    "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.8"
+    "gulp-uglify": "^1.5.4"
   }
 }
