--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "path": "^0.12.7",
     "querystring": "^0.2.0",
     "request": "^2.73.0",
-    "satellizer": "^0.15.0"
-  },
-  "devDependencies": {
+    "satellizer": "^0.15.0",
     "babel-preset-es2015": "^6.9.0",
     "browser-sync": "^2.13.0",
     "gulp-babel": "^6.1.2",
@@ -38,5 +36,8 @@
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4"
+  },
+  "devDependencies": {
+
   }
 }
