--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.7.1",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^2.0.11",
     "jsonwebtoken": "^7.1.6",
     "jwt-simple": "^0.5.0",
     "moment": "^2.14.1",
