--- a/package.json
+++ b/package.json
@@ -12,12 +12,23 @@
     "angular": "^1.5.7",
     "angular-ui-router": "^0.3.1",
     "angularjs-datepicker": "^2.1.6",
+    "babel-preset-es2015": "^6.9.0",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
+    "browser-sync": "^2.13.0",
     "cors": "^2.7.1",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^2.0.11",
+    "gulp-concat": "^2.6.0",
+    "gulp-if": "^2.0.1",
+    "gulp-ng-annotate": "^2.0.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.4",
     "jsonwebtoken": "^7.1.6",
     "jwt-simple": "^0.5.0",
     "moment": "^2.14.1",
@@ -25,19 +36,8 @@
     "path": "^0.12.7",
     "querystring": "^0.2.0",
     "request": "^2.73.0",
-    "satellizer": "^0.15.0",
-    "babel-preset-es2015": "^6.9.0",
-    "browser-sync": "^2.13.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.0",
-    "gulp-ng-annotate": "^2.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.4"
+    "run-sequence": "^1.2.2",
+    "satellizer": "^0.15.0"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
