--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "angular": "^1.5.7",
     "angular-ui-router": "^0.3.1",
     "angularjs-datepicker": "^2.1.6",
+    "axios": "^0.13.1",
     "babel-preset-es2015": "^6.9.0",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
