--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.7",
+    "angular-stripe": "^4.2.12",
     "angular-ui-router": "^0.3.1",
     "angularjs-datepicker": "^2.1.6",
     "axios": "^0.13.1",
@@ -40,7 +41,8 @@
     "querystring": "^0.2.0",
     "request": "^2.73.0",
     "run-sequence": "^1.2.2",
-    "satellizer": "^0.15.0"
+    "satellizer": "^0.15.0",
+    "stripe": "^4.9.0"
   },
   "devDependencies": {}
 }
